--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Portfolio Karim Moutiq</title>
+		<title>Digital CV-Karim Moutiq</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -25,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Karim Moutiq - Digital CV</h1>
-								<p>A fully responsive site CV.</p>
+								<p>A fully responsive CV - Site</p>
 							</div>
 						</div>
 						<nav>
@@ -34,7 +35,7 @@
 								<li><a href="#work">Beruflicher Werdegang</a></li>
 								<li><a href="#bildung">Bildung</a></li>
 								<li><a href="#lang">Sprachen</a></li>
-								<li><a href="#contact">Freizeit</a></li>
+								<li><a href="#contact">Kontakt</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -47,37 +48,147 @@
 							<article id="aboutme">
 								<h2 class="major">Personalien</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+
+									<div class="table-wrapper">
+										<table>
+											<tbody>
+												<tr>
+													<td>Name: </td>
+													<td>Karim Moutiq</td>
+												</tr>
+												<tr>
+													<td>Jahrgang: </td>
+													<td>1994</td>
+												</tr>
+												<tr>
+													<td>E-Mail: </td>
+													<td>Karim.moutiq@gmail.com</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								<h3 class="major">Über Mich</h3>
+								<p>Ich geniesse es, Zeit in der freien Natur zu verbringen. Im Sommer schwimme ich gerne in den Seen der Schweiz, grilliere und treibe freudig Sport.
+									Im Winter findet man mich im eisigen Wasser, zuhause mit einem Buch oder im nächsten Horror Film, da ich ein passionierter Horrorfilmfanatiker bin.
+									<br>
+									Ich lebe nach der "KAIZEN" Philosophie, die beste Version des Selbst zu werden. Dies ziehe ich in allen Lebensbereichen konsequent durch, es spiegelt sich auch in meinen Projekten wieder.</p>
 							</article>
 
 						<!-- Beruflicher Werdegang -->
 							<article id="work">
 								<h2 class="major">Beruflicher Werdegang</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+
+									<div class="table-wrapper">
+										<table>
+											<tbody>
+												<tr>
+													<td>Name: </td>
+													<td>Karim Moutiq</td>
+												</tr>
+												<tr>
+													<td>Jahrgang: </td>
+													<td>1994</td>
+												</tr>
+												<tr>
+													<td>E-Mail: </td>
+													<td>Karim.moutiq@gmail.com</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+
+
 							</article>
 
 						<!-- Bildung -->
 							<article id="bildung">
 								<h2 class="major">Bildung</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+									<div class="table-wrapper">
+										<table>
+											<tbody>
+												
+												<tr>
+													<td>2011 - 2015<br>Informatik Lehre</td>
+													<td> Fachrichtung: Applikationsentwickler </td>
+													<td>Unic AG ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
+														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
+														um eine durchgängige Customer Journey mit einem einzigartigen Erlebnis zu machen.</td>
+												</tr>
+												<tr>
+													<td> 2015-2016 <br> Berufsmaturitässchule</td>
+													<td>Sozialwissenschaftliches Profil</td>
+													<td>Die Berufsmaturität ist ein eidgenössisch anerkannter Abschluss,
+														der berufliche Kenntnisse mit einer Vertiefung des Allgemeinwissens verbindet.
+														Die Berufsmaturität bildet somit eine geeignete Grundlage für die Zulassung zu Schulen der Tertiärstufe
+														und zu zahlreichen Weiterbildungen.</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 							</article>
 
 						<!-- Sprachen -->
 							<article id="lang">
 								<h2 class="major">Sprachen</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+								<br>
+								<h3 class=" major">Gesprochenesprachen</h3>
+								<br>
+								<!-- Deutsch -->
+								<h4><span class="label label-default">Deutsch</span></h4>
+									<div class="progress">
+										<div class="progress-bar" style="width:99%">Muttersprache</div>
+									</div>
+								<br>
+								<!-- Englisch -->
+								<h4><span class="label label-default">Englisch</span></h4>
+									<div class="progress">
+										<div class="progress-bar" style="width:75%">C1: Fliessend in Schrift und Sprache</div>
+									</div>
+								<br>
+								<!-- Französisch -->
+								<h4><span class="label label-default">Französisch</span></h4>
+									<div class="progress">
+										<div class="progress-bar" style="width:60%">Fliessend</div>
+									</div>
+								<br>
+								<!-- Italienisch -->
+								<h4><span class="label label-default">Italienisch</span></h4>
+									<div class="progress">
+										<div class="progress-bar" style="width:99%">Muttersprache</div>
+									</div>
 
-						<!-- Freizeit -->
-							<article id="lang">
-								<h2 class="major">Freizeit</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<br><br>
+								<h3>Programmiersprachen</h3>
+								<br>
+								<!-- HTML -->
+								<h4><span class="label label-default">HTML</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
+								</div>
+								<br>
+								<!-- CSS -->
+								<h4><span class="label label-default">CSS</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
+								</div>
+								<br>
+								<!-- Javascript -->
+								<h4><span class="label label-default">Javascript</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<br>
+								<!-- PHP -->
+								<h4><span class="label label-default">PHP</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<br>
+								<!-- Python -->
+								<h4><span class="label label-default">Python</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
 							</article>
 
 						<!-- Contact -->
