--- a/index.html
+++ b/index.html
@@ -77,26 +77,28 @@
 						<!-- Beruflicher Werdegang -->
 							<article id="work">
 								<h2 class="major">Beruflicher Werdegang</h2>
-
 									<div class="table-wrapper">
 										<table>
 											<tbody>
+
 												<tr>
-													<td>Name: </td>
-													<td>Karim Moutiq</td>
+													<td>2011 - 2015<br>Informatik Lehre</td>
+													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
+														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
+														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
+														um eine durchgängige Customer Journey mit einem einzigartigen Erlebnis zu machen.</td>
 												</tr>
 												<tr>
-													<td>Jahrgang: </td>
-													<td>1994</td>
-												</tr>
-												<tr>
-													<td>E-Mail: </td>
-													<td>Karim.moutiq@gmail.com</td>
+													<td> 2015-2016 <br> Berufsmaturitässchule</td>
+													<td><h4>Sozialwissenschaftliches Profil</h4>
+														<b>Die Berufsmaturität</b> ist ein eidgenössisch anerkannter Abschluss,
+														der berufliche Kenntnisse mit einer Vertiefung des Allgemeinwissens verbindet.
+														Die Berufsmaturität bildet somit eine geeignete Grundlage für die Zulassung zu Schulen der Tertiärstufe
+														und zu zahlreichen Weiterbildungen.</td>
 												</tr>
 											</tbody>
 										</table>
 									</div>
-
 
 							</article>
 
@@ -106,21 +108,23 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
-												
-												<tr>
-													<td>2011 - 2015<br>Informatik Lehre</td>
-													<td> Fachrichtung: Applikationsentwickler </td>
-													<td>Unic AG ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
-														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
-														um eine durchgängige Customer Journey mit einem einzigartigen Erlebnis zu machen.</td>
-												</tr>
 												<tr>
 													<td> 2015-2016 <br> Berufsmaturitässchule</td>
-													<td>Sozialwissenschaftliches Profil</td>
-													<td>Die Berufsmaturität ist ein eidgenössisch anerkannter Abschluss,
+													<td><h4>Sozialwissenschaftliches Profil</h4>
+														<b>Die Berufsmaturität</b> ist ein eidgenössisch anerkannter Abschluss,
 														der berufliche Kenntnisse mit einer Vertiefung des Allgemeinwissens verbindet.
 														Die Berufsmaturität bildet somit eine geeignete Grundlage für die Zulassung zu Schulen der Tertiärstufe
 														und zu zahlreichen Weiterbildungen.</td>
+												</tr>
+
+												<tr>
+													<td>2007 & 2009<br>Asia Budo Center</td>
+													<td colspan="2"><h4>Martial Arts Instruktor/Leiter</h4>
+														<ul>
+															<li>Martial Arts Kurse, erstellt & organisiert</li>
+															<li>Martial Arts Kurse, geleitet</li>
+														</ul>
+													</td>
 												</tr>
 											</tbody>
 										</table>
