--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#aboutme">Personalien</a></li>
-								<li><a href="#work">Beruflicher Werdegang</a></li>
+								<li><a href="#work">Werdegang</a></li>
 								<li><a href="#bildung">Bildung</a></li>
 								<li><a href="#lang">Sprachen</a></li>
 								<li><a href="#contact">Kontakt</a></li>
@@ -80,21 +80,74 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
-
-												<tr>
-													<td>2011 - 2015<br>Informatik Lehre</td>
-													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
-														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
-														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
-														um eine durchgängige Customer Journey mit einem einzigartigen Erlebnis zu machen.</td>
+											<tr>
+													<td>2018-2019<br>Skycell AG</td>
+													<td colspan="2"><h4>Senior Information Technology Support Engineer</h4>
+														<ul>
+															<li>Monitoring and maintaining computer systems and networks</li>
+															<li>Installing and configuring computer hardware, software, systems, networks, printers and scanners</li>
+															<li>Providing technical support across the company</li>
+															<li>Setting up accounts for new users</li>
+															<li>Repairing and replacing equipment as necessary</li>
+															<li>Testing new technology</li>
+															<li>Conduct research on software and systems products to justify recommendations and to support purchasing efforts.</li>
+															<li>Write and maintain custom scripts to increase system efficiency and lower the human intervention time on any tasks</li>
+														</ul>
+											</tr>
+											<tr>
+													<td>2018-2019<br>Bank Juliusbär</td>
+													<td colspan="2"><h4>IT Service-Administrator</h4>
+														<ul>
+															<li>Interner Benutzersupport</li>
+															<li>Erstellen & Pflege des Know-How Database</li>
+															<li>Betreuung der Juliusbär Service-Applikationen</li>
+															<li>Installation, Wartung & Support der Applikationen</li>
+															<li>Führen der Dokumentation (inklusive einführen neuer Dokumentationsystematik)</li>
+															<li>Mitarbeiten in IT internen Projekten</li>
+														</ul>
+												</tr>
+											<tr>
+													<td>2017-2018<br>Zühlke Engeneering AG</td>
+													<td colspan="2"><h4>Senior Information Technology Support Engineer</h4>
+														<ul>
+															<li>Interner Benutzersupport</li>
+															<li>Erstellen & Pflege des Know-How Database</li>
+															<li>Erstellen & Pflege der Zühlke Applications</li>
+															<li>Überwachen & Troubleshooting der IT-Netzwerke & firmeneigenen Server</li>
+															<li>Führen der Dokumentation (inklusive Einführen neuer Dokumentationsystematik)</li>
+															<li>Mitarbeiten in IT Projekten</li>
+														</ul>
 												</tr>
 												<tr>
-													<td> 2015-2016 <br> Berufsmaturitässchule</td>
-													<td><h4>Sozialwissenschaftliches Profil</h4>
-														<b>Die Berufsmaturität</b> ist ein eidgenössisch anerkannter Abschluss,
-														der berufliche Kenntnisse mit einer Vertiefung des Allgemeinwissens verbindet.
-														Die Berufsmaturität bildet somit eine geeignete Grundlage für die Zulassung zu Schulen der Tertiärstufe
-														und zu zahlreichen Weiterbildungen.</td>
+													<td>2016-2017<br>Duetto Automobile GmbH</td>
+													<td colspan="2"><h4>Manager of IT Infrastructure</h4>
+														<ul>
+															<li>Interner Benutzersupport</li>
+															<li>Erstellen & Pflege des Know-How Database</li>
+															<li>Planung,Erstellen & Pflege der Netzwerkumgebung</li>
+															<li>Planung,erstellen & pflege der Online-Präsenz(Website & Social Media)</li>
+															<li>Professionelle Bildmanipulation</li>
+															<li>Shop Content Administrator</li>
+														</ul>
+												</tr>
+
+												<tr>
+													<td>2015-2016<br>AMAG-Gruppe</td>
+													<td colspan="2"><h4>Serivce Administrator (viersprachig)</h4>
+														<ul>
+															<li>Interner Benutzersupport</li>
+															<li>Erstellen & Pflege des Know-How Database</li>
+															<li>Unterstützen der VIP Kontakte (viersprachig)</li>
+														</ul>
+												</tr>
+												<tr>
+													<td>2007 & 2009<br>Asia Budo Center</td>
+													<td colspan="2"><h4>Martial Arts Instruktor/Leiter</h4>
+														<ul>
+															<li>Martial Arts Kurse, erstellt & organisiert</li>
+															<li>Martial Arts Kurse, geleitet</li>
+														</ul>
+													</td>
 												</tr>
 											</tbody>
 										</table>
@@ -118,13 +171,11 @@
 												</tr>
 
 												<tr>
-													<td>2007 & 2009<br>Asia Budo Center</td>
-													<td colspan="2"><h4>Martial Arts Instruktor/Leiter</h4>
-														<ul>
-															<li>Martial Arts Kurse, erstellt & organisiert</li>
-															<li>Martial Arts Kurse, geleitet</li>
-														</ul>
-													</td>
+													<td>2007 & 2009<br>Informatik Lehre</td>
+													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
+														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
+														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
+														um eine durchgängige Customer Journey mit einem einzigartigen Erlebnis zu machen.</td>
 												</tr>
 											</tbody>
 										</table>
@@ -135,7 +186,7 @@
 							<article id="lang">
 								<h2 class="major">Sprachen</h2>
 								<br>
-								<h3 class=" major">Gesprochenesprachen</h3>
+								<h3>Gesprochene Sprachen</h3>
 								<br>
 								<!-- Deutsch -->
 								<h4><span class="label label-default">Deutsch</span></h4>
