--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
 										</table>
 									</div>
 								<h3 class="major">Über Mich</h3>
-								<p>Ich geniesse es, Zeit in der freien Natur zu verbringen. Im Sommer schwimme ich gerne in den Seen der Schweiz, grilliere und treibe freudig Sport.
+								<p> Hi ich bins Karim,
+									Ich geniesse es, Zeit in der freien Natur zu verbringen.
+									Im Sommer schwimme ich gerne in den Seen der Schweiz, grilliere und treibe freudig Sport.
 									Im Winter findet man mich im eisigen Wasser, zuhause mit einem Buch oder im nächsten Horror Film, da ich ein passionierter Horrorfilmfanatiker bin.
 									<br>
-									Ich lebe nach der "KAIZEN" Philosophie, die beste Version des Selbst zu werden. Dies ziehe ich in allen Lebensbereichen konsequent durch, es spiegelt sich auch in meinen Projekten wieder.</p>
+									Ich lebe nach der "KAIZEN" Philosophie, damit ist die permanente Verbesserung von Tätigkeiten, Abläufen, Verfahren durch täglichen Einsatz gemeint.<br>
+									Dies ziehe ich in allen Lebensbereichen konsequent durch, wodurch es sich in all meinen Projekten wiederspiegelt.</p>
 							</article>
 
 						<!-- Beruflicher Werdegang -->
