--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									Ich geniesse es, Zeit in der freien Natur zu verbringen.
 									Im Sommer schwimme ich gerne in den Seen der Schweiz, grilliere und treibe freudig Sport.
 									Im Winter findet man mich im eisigen Wasser, zuhause mit einem Buch oder im nächsten Horror Film, da ich ein passionierter Horrorfilmfanatiker bin.
-									<br>
+									<br><br>
 									Ich lebe nach der "KAIZEN" Philosophie, damit ist die permanente Verbesserung von Tätigkeiten, Abläufen, Verfahren durch täglichen Einsatz gemeint.<br>
 									Dies ziehe ich in allen Lebensbereichen konsequent durch, wodurch es sich in all meinen Projekten wiederspiegelt.</p>
 							</article>
@@ -471,7 +471,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="#">
+									<form method="post" action="mailto:karim.moutiq@gmail.com">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
