--- a/index.html
+++ b/index.html
@@ -247,6 +247,37 @@
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
 								</div>
+
+								<br><br>
+								<h3>Frameworks</h3>
+								<br>
+								<!-- Bootstrap -->
+								<h4><span class="label label-default">Bootstrap</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
+								</div>
+								<br>
+								<!-- JQuery -->
+								<h4><span class="label label-default">JQuery</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<br>
+								<!-- Laravel -->
+								<h4><span class="label label-default">Laravel</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<!-- Flask -->
+								<h4><span class="label label-default">FLask</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">60%</div>
+								</div>
+								<!-- Django -->
+								<h4><span class="label label-default">Django</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
+								</div>
 							</article>
 
 						<!-- Contact -->
