--- a/index.html
+++ b/index.html
@@ -84,7 +84,22 @@
 										<table>
 											<tbody>
 											<tr>
-													<td>2018-2019<br>Skycell AG</td>
+													<td>2020-2021<br>TE-Immobilien-und-Treuhand-Gmbh</td>
+													<td colspan="2"><h4>Manager of Infrastructure & Operation</h4>
+														<ul>
+															<li>Monitoring and maintaining computer systems and networks</li>
+															<li>Installing and configuring computer hardware, software, systems, networks, printers and scanners</li>
+															<li>Providing technical support across the company</li>
+															<li>Setting up accounts for new users</li>
+															<li>Repairing and replacing equipment as necessary</li>
+															<li>Testing new technology</li>
+															<li>Conduct research on software and systems products to justify recommendations and to support purchasing efforts.</li>
+															<li>Write and maintain custom scripts to increase system efficiency and lower the human intervention time on any tasks</li>
+														</ul>
+											</tr>
+
+											<tr>
+													<td>2018-2020<br>Skycell AG</td>
 													<td colspan="2"><h4>Senior Information Technology Support Engineer</h4>
 														<ul>
 															<li>Monitoring and maintaining computer systems and networks</li>
@@ -129,7 +144,7 @@
 															<li>Erstellen & Pflege des Know-How Database</li>
 															<li>Planung,Erstellen & Pflege der Netzwerkumgebung</li>
 															<li>Planung,erstellen & pflege der Online-Präsenz(Website & Social Media)</li>
-															<li>Professionelle Bildmanipulation</li>
+															<li>Professionelle Bildbearbeitung</li>
 															<li>Shop Content Administrator</li>
 														</ul>
 												</tr>
@@ -307,7 +322,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">FreeCodeCamp</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
