--- a/index.html
+++ b/index.html
@@ -299,6 +299,31 @@
 
 						<!-- Contact -->
 							<article id="contact">
+								<h2 class="major">Wo bin ich zu finden?</h2>
+									<div class="table-wrapper">
+										<table>
+											<tbody>
+												<tr>
+													<td>FreeCodeCamp</td>
+													<td>LinkedIn</td>
+													<td>GitHub</td>
+												</tr>
+											<tr>
+													<td><a href="#" class="icon brands fa-linkedin"><span class="label">FreeCodeCamp</span></a></td>
+													<td><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></td>
+													<td><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></td>
+												</tr>
+
+
+											</tbody>
+										</table>
+									</div>
+
+
+
+
+
+
 								<h2 class="major">Contact</h2>
 								<form method="post" action="mailto:karim.moutiq@gmail.com">
 									<div class="fields">
@@ -322,7 +347,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">FreeCodeCamp</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
