Updated Bildung & Werdegang

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 											<tr>
 													<td>2018-2020<br>Skycell AG</td>
-													<td colspan="2"><h4>Senior Information Technology Support Engineer</h4>
+													<td colspan="2"><h4>Senior IT System Administrator</h4>
 														<ul>
 															<li>Monitoring and maintaining computer systems and networks</li>
 															<li>Installing and configuring computer hardware, software, systems, networks, printers and scanners</li>
@@ -113,7 +113,7 @@
 														</ul>
 											</tr>
 											<tr>
-													<td>2018-2019<br>Bank Juliusbär</td>
+													<td>2016-2018<br>Bank Juliusbär</td>
 													<td colspan="2"><h4>IT Service-Administrator</h4>
 														<ul>
 															<li>Interner Benutzersupport</li>
@@ -125,39 +125,10 @@
 														</ul>
 												</tr>
 											<tr>
-													<td>2017-2018<br>Zühlke Engeneering AG</td>
-													<td colspan="2"><h4>Senior Information Technology Support Engineer</h4>
-														<ul>
-															<li>Interner Benutzersupport</li>
-															<li>Erstellen & Pflege des Know-How Database</li>
-															<li>Erstellen & Pflege der Zühlke Applications</li>
-															<li>Überwachen & Troubleshooting der IT-Netzwerke & firmeneigenen Server</li>
-															<li>Führen der Dokumentation (inklusive Einführen neuer Dokumentationsystematik)</li>
-															<li>Mitarbeiten in IT Projekten</li>
-														</ul>
-												</tr>
-												<tr>
-													<td>2016-2017<br>Duetto Automobile GmbH</td>
-													<td colspan="2"><h4>Manager of IT Infrastructure</h4>
-														<ul>
-															<li>Interner Benutzersupport</li>
-															<li>Erstellen & Pflege des Know-How Database</li>
-															<li>Planung,Erstellen & Pflege der Netzwerkumgebung</li>
-															<li>Planung,erstellen & pflege der Online-Präsenz(Website & Social Media)</li>
-															<li>Professionelle Bildbearbeitung</li>
-															<li>Shop Content Administrator</li>
-														</ul>
-												</tr>
+													<td>2017-2018<br>Lehre : Unic AG</td>
+													<td colspan="2"><h4>Informatik Fa. Applikationsentwickler</h4>
 
-												<tr>
-													<td>2015-2016<br>AMAG-Gruppe</td>
-													<td colspan="2"><h4>Serivce Administrator (viersprachig)</h4>
-														<ul>
-															<li>Interner Benutzersupport</li>
-															<li>Erstellen & Pflege des Know-How Database</li>
-															<li>Unterstützen der VIP Kontakte (viersprachig)</li>
-														</ul>
-												</tr>
+											</tr>
 												<tr>
 													<td>2007 & 2009<br>Asia Budo Center</td>
 													<td colspan="2"><h4>Martial Arts Instruktor/Leiter</h4>
@@ -189,7 +160,7 @@
 												</tr>
 
 												<tr>
-													<td>2007 & 2009<br>Informatik Lehre</td>
+													<td>2007 & 2009<br>Informatik Lehre: BBW, Berufsfachschule Winterthur</td>
 													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
 														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
 														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
