Updated Bildung & Werdegang

--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
 											</tr>
 											<tr>
 													<td>2016-2018<br>Bank Juliusbär</td>
-													<td colspan="2"><h4>IT Service-Administrator</h4>
+													<td colspan="2"><h4>IT System dministrator</h4>
 														<ul>
+															<li> 1st to 3rd Level Support for User and Applications</li>
 															<li>Interner Benutzersupport</li>
 															<li>Erstellen & Pflege des Know-How Database</li>
 															<li>Betreuung der Juliusbär Service-Applikationen</li>
