--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Karim Moutiq - Digital CV</h1>
-								<p>A fully responsive CV - Site</p>
+								<p>A fully responsive digital - CV </p>
 							</div>
 						</div>
 						<nav>
@@ -69,9 +69,9 @@
 									</div>
 								<h3 class="major">Über Mich</h3>
 								<p> Hi ich bins Karim,
-									Ich geniesse es, Zeit in der freien Natur zu verbringen.
-									Im Sommer schwimme ich gerne in den Seen der Schweiz, grilliere und treibe freudig Sport.
-									Im Winter findet man mich im eisigen Wasser, zuhause mit einem Buch oder im nächsten Horror Film, da ich ein passionierter Horrorfilmfanatiker bin.
+									Ich arbeite mit DevOps Tools um Usern die Möglichkeit zu geben vereinfacht ihre On-Prem Umgebungen in the Cloud zu bringen.
+									In den letzen 5 Jahren, habe ich die Azure- sowie die Kubernetes-Zertifizierung erfolgreich bestanden.
+									Privat, besitze ich eine Kämpfernatur, also trainiere ich viel in der freien Natur oder als passionierter Film Fanatiker findet man mich auch im nächsten Kinosaal.
 									<br><br>
 									Ich lebe nach der "KAIZEN" Philosophie, damit ist die permanente Verbesserung von Tätigkeiten, Abläufen, Verfahren durch täglichen Einsatz gemeint.<br>
 									Dies ziehe ich in allen Lebensbereichen konsequent durch, wodurch es sich in all meinen Projekten wiederspiegelt.</p>
@@ -114,7 +114,7 @@
 											</tr>
 											<tr>
 													<td>2016-2018<br>Bank Juliusbär</td>
-													<td colspan="2"><h4>IT System dministrator</h4>
+													<td colspan="2"><h4>IT System Administrator</h4>
 														<ul>
 															<li> 1st to 3rd Level Support for User and Applications</li>
 															<li>Interner Benutzersupport</li>
@@ -267,6 +267,38 @@
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
 								</div>
+
+								<h3>Technologien</h3>
+								<br>
+								<!-- Bootstrap -->
+								<h4><span class="label label-default">Docker</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
+								</div>
+								<br>
+								<!-- JQuery -->
+								<h4><span class="label label-default">Docker Swarm</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<br>
+								<!-- Laravel -->
+								<h4><span class="label label-default">Kubernetes</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+								</div>
+								<br>
+								<!-- Flask -->
+								<h4><span class="label label-default">Ansible</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">60%</div>
+								</div>
+								<br>
+								<!-- Django -->
+								<h4><span class="label label-default">Terraform</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
+								</div>
 							</article>
 
 						<!-- Contact -->
@@ -281,12 +313,9 @@
 													<td>GitHub</td>
 												</tr>
 											<tr>
-													<td><a href="#" class="icon brands fa-linkedin"><span class="label">FreeCodeCamp</span></a></td>
-													<td><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></td>
-													<td><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></td>
+													<td><a href="https://www.freecodecamp.org/majin_kami" class="icon brands  fa-free-code-camp"><span class="label">FreeCodeCamp</span></a></td>
+													<td><a href="https://github.com/KarmaKami994" class="icon brands fa-github"><span class="label">GitHub</span></a></td>
 												</tr>
-
-
 											</tbody>
 										</table>
 									</div>
@@ -318,9 +347,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">FreeCodeCamp</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.freecodecamp.org/majin_kami" class="icon brands  fa-free-code-camp"><span class="label">FreeCodeCamp</span></a></li>
+									<li><a href="https://github.com/KarmaKami994" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
