--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 														</ul>
 												</tr>
 											<tr>
-													<td>2017-2018<br>Lehre : Unic AG</td>
+													<td>2011-2015<br>Lehre : Unic AG</td>
 													<td colspan="2"><h4>Informatik Fa. Applikationsentwickler</h4>
 
 											</tr>
@@ -152,7 +152,7 @@
 										<table>
 											<tbody>
 												<tr>
-													<td> 2015-2016 <br> Berufsmaturitässchule</td>
+													<td> 2015-2017 <br> Berufsmaturitässchule</td>
 													<td><h4>Sozialwissenschaftliches Profil</h4>
 														<b>Die Berufsmaturität</b> ist ein eidgenössisch anerkannter Abschluss,
 														der berufliche Kenntnisse mit einer Vertiefung des Allgemeinwissens verbindet.
@@ -161,7 +161,7 @@
 												</tr>
 
 												<tr>
-													<td>2007 & 2009<br>Informatik Lehre: BBW, Berufsfachschule Winterthur</td>
+													<td>20011-2015<br>Informatik Lehre: BBW, Berufsfachschule Winterthur</td>
 													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
 														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
 														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
@@ -270,31 +270,31 @@
 								<br>
 								<h3>Technologien</h3>
 								<br>
-								<!-- Bootstrap -->
+								<!-- Docker -->
 								<h4><span class="label label-default">Docker</span></h4>
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">25%</div>
 								</div>
 								<br>
-								<!-- JQuery -->
+								<!-- Docker Swarm -->
 								<h4><span class="label label-default">Docker Swarm</span></h4>
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">10%</div>
 								</div>
 								<br>
-								<!-- Laravel -->
+								<!-- Kubernetes -->
 								<h4><span class="label label-default">Kubernetes</span></h4>
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
 								</div>
 								<br>
-								<!-- Flask -->
+								<!-- Ansible -->
 								<h4><span class="label label-default">Ansible</span></h4>
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">10%</div>
 								</div>
 								<br>
-								<!-- Django -->
+								<!-- Terraform -->
 								<h4><span class="label label-default">Terraform</span></h4>
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
