--- a/index.html
+++ b/index.html
@@ -87,14 +87,12 @@
 													<td>2020-2021<br>TE-Immobilien-und-Treuhand-Gmbh</td>
 													<td colspan="2"><h4>Manager of Infrastructure & Operation</h4>
 														<ul>
-															<li>Monitoring and maintaining computer systems and networks</li>
-															<li>Installing and configuring computer hardware, software, systems, networks, printers and scanners</li>
-															<li>Providing technical support across the company</li>
-															<li>Setting up accounts for new users</li>
-															<li>Repairing and replacing equipment as necessary</li>
-															<li>Testing new technology</li>
-															<li>Conduct research on software and systems products to justify recommendations and to support purchasing efforts.</li>
-															<li>Write and maintain custom scripts to increase system efficiency and lower the human intervention time on any tasks</li>
+															<li>Überwachen und Warten von Computersystemen und Netzwerken</li>
+															<li>Installieren und Konfigurieren von Computerhardware, Software, Systemen, Netzwerken, Druckern und Scannern</li>
+															<li>Bereitstellung von technischem Support im gesamten Unternehmen</li>
+															<li>Schreiben und Pflegen der benutzerdefinierten Skripte, um die Systemeffizienz zu erhöhen und die menschliche Interventionszeit bei
+																allen Aufgaben zu verringern</li>
+															<li>Aufbau interner IT Infrastruktur - Basis Azure Cloud/AD</li>
 														</ul>
 											</tr>
 
@@ -102,14 +100,13 @@
 													<td>2018-2020<br>Skycell AG</td>
 													<td colspan="2"><h4>Senior IT System Administrator</h4>
 														<ul>
-															<li>Monitoring and maintaining computer systems and networks</li>
-															<li>Installing and configuring computer hardware, software, systems, networks, printers and scanners</li>
-															<li>Providing technical support across the company</li>
-															<li>Setting up accounts for new users</li>
-															<li>Repairing and replacing equipment as necessary</li>
-															<li>Testing new technology</li>
-															<li>Conduct research on software and systems products to justify recommendations and to support purchasing efforts.</li>
-															<li>Write and maintain custom scripts to increase system efficiency and lower the human intervention time on any tasks</li>
+															<li>Durchführung von Recherchen zu Software- und Systemprodukten, um Empfehlungen zu begründen und den Einkauf zu unterstützen</li>
+															<li>Erprobung neuer Technologien</li>
+															<li>Schreiben und Pflegen der benutzerdefinierten Skripte, um die Systemeffizienz zu erhöhen und die menschliche Interventionszeit bei
+																allen Aufgaben zu verringern</li>
+															<li>Bereitstellung von technischem Support im gesamten Unternehmen</li>
+															<li>Installieren und Konfigurieren von Computerhardware, Software, Systemen, Netzwerken, Druckern und Scannern</li>
+															<li>AD Administrator (Azure Cloud)</li>
 														</ul>
 											</tr>
 											<tr>
@@ -161,7 +158,7 @@
 												</tr>
 
 												<tr>
-													<td>20011-2015<br>Informatik Lehre: BBW, Berufsfachschule Winterthur</td>
+													<td>2011-2015<br>Informatik Lehre: BBW, Berufsfachschule Winterthur</td>
 													<td colspan="2"><h4>Fachrichtung: Applikationsentwickler</h4>
 														<b>Unic AG</b> ist ein europaweit führender Anbieter von integrierten E-Business-Lösungen.
 														Gemeinsam mit ihren Kunden identifizieren und nutzen sie die strategischen Chancen der digitalen Welt,
