--- a/index.html
+++ b/index.html
@@ -83,9 +83,26 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
+											
+											<tr>
+													<td>2021-2022<br>Steiner AG</td>
+													<td colspan="2"><h4>System Engineer</h4>
+														<ul>
+															<li>Systemintegration, Migration und Upgrade bestehender Serversysteme</li>
+															<li>Integration von Software Applikationen in die Systemlandschaft des Kunden</li>
+															<li>Unterstützung des Supports (Lvl 1-3)</li>
+															<li>Mithilfe beim Applikationssupport</li>
+															<li>Evaluation, Test und Implementierung neuer Softwareprodukte und Release Updates</li>
+															<li>Aufbau der Internen Betriebshandbücher,Anleitungen</li>
+															<li>Aufbau der Kunden Knowledgebase</li>
+															<li>Mithilfe beim aufbau der FIrmen internen Azure Tenant</li>
+															<li>Azure Administrator</li>
+														</ul>
+											</tr>
+
 											<tr>
 													<td>2020-2021<br>TE-Immobilien-und-Treuhand-Gmbh</td>
-													<td colspan="2"><h4>Manager of Infrastructure & Operation</h4>
+													<td colspan="2"><h4>System Engineer / Project Manager</h4>
 														<ul>
 															<li>Überwachen und Warten von Computersystemen und Netzwerken</li>
 															<li>Installieren und Konfigurieren von Computerhardware, Software, Systemen, Netzwerken, Druckern und Scannern</li>
@@ -148,6 +165,14 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
+												<tr>
+													<td> 2022 Jan - 2022 Aug <br> KodeKloud</td>
+													<td><h4>Cloud Technologie Zertifkaatskurs</h4>
+														<b>KodeKloud</b> bietet immersive Lernerfahrungen, 
+														die Ihren Teammitgliedern helfen, DevOps zu meistern. Unabhängig von den Vorkenntnissen. 
+														Beschleunigen Sie das Wachstum Ihres Unternehmens, indem Sie Ihr Team mit detaillierten Kursen,
+														praktischen Übungen und Cloud-Spielplätzen auf die nächste Stufe bringen.</td>
+												</tr>
 												<tr>
 													<td> 2015-2017 <br> Berufsmaturitässchule</td>
 													<td><h4>Sozialwissenschaftliches Profil</h4>
