updated Werdegang und Bildung section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 												<tr>
 													<td> 2022 Jan - 2022 Aug <br> KodeKloud</td>
 													<td><h4>Cloud Technologie Zertifkaatskurs</h4>
-														<b>KodeKloud</b> bietet immersive Lernerfahrungen, 
+														<b>KodeKloud</b> KodeKloud bietet immersive Lernerfahrungen, 
 														die Ihren Teammitgliedern helfen, DevOps zu meistern. Unabhängig von den Vorkenntnissen. 
 														Beschleunigen Sie das Wachstum Ihres Unternehmens, indem Sie Ihr Team mit detaillierten Kursen,
 														praktischen Übungen und Cloud-Spielplätzen auf die nächste Stufe bringen.</td>
