--- a/index.html
+++ b/index.html
@@ -85,17 +85,28 @@
 											<tbody>
 											
 											<tr>
-													<td>2021-2022<br>Steiner AG</td>
-													<td colspan="2"><h4>System Engineer</h4>
+													<td>2023<br>Ventoo AG</td>
+													<td colspan="2"><h4>Azure Cloud Engineer</h4>
+														<ul>
+															<li>Engineering in den Bereichen Microsoft Clientinfrastruktur und Digital Workplace (MWP - Modern Work Place)</li>
+															<li> Packetierung der Standartsoftware für Clients im Endpoint Manager</li>
+															<li>Aufbau der Kunden Azure Tenants</li>
+															<li>Azure Administrator</li>
+															<li>Automatisierungen von Prozessen Powershell Basis</li>
+														</ul>
+											</tr>
+											<tr>
+													<td>2021-2023<br>Steiner AG</td>
+													<td colspan="2"><h4>System / Cloud Engineer</h4>
 														<ul>
 															<li>Systemintegration, Migration und Upgrade bestehender Serversysteme</li>
 															<li>Integration von Software Applikationen in die Systemlandschaft des Kunden</li>
-															<li>Unterstützung des Supports (Lvl 1-3)</li>
+															<li>Unterstützung des Supports (Lvl 2-3)</li>
 															<li>Mithilfe beim Applikationssupport</li>
 															<li>Evaluation, Test und Implementierung neuer Softwareprodukte und Release Updates</li>
-															<li>Aufbau der Internen Betriebshandbücher,Anleitungen</li>
+															<li>Aufbau der Internen Betriebshandbücher,Dokumentation</li>
 															<li>Aufbau der Kunden Knowledgebase</li>
-															<li>Mithilfe beim aufbau der FIrmen internen Azure Tenant</li>
+															<li>Mithilfe beim aufbau der Firmen internen Azure Tenants</li>
 															<li>Azure Administrator</li>
 														</ul>
 											</tr>
@@ -167,7 +178,7 @@
 											<tbody>
 												<tr>
 													<td> 2022 Jan - 2022 Aug <br> KodeKloud</td>
-													<td><h4>Cloud Technologie Zertifkaatskurs</h4>
+													<td><h4>Cloud Technologie Zertifkatskurs</h4>
 														<b>KodeKloud</b> KodeKloud bietet immersive Lernerfahrungen, 
 														die Ihren Teammitgliedern helfen, DevOps zu meistern. Unabhängig von den Vorkenntnissen. 
 														Beschleunigen Sie das Wachstum Ihres Unternehmens, indem Sie Ihr Team mit detaillierten Kursen,
@@ -256,6 +267,11 @@
 								<div class="progress md-progress">
 									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
 								</div>
+								<!-- Powershell -->
+								<h4><span class="label label-default">Powershell</span></h4>
+								<div class="progress md-progress">
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">70%</div>
+								</div>
 
 								<br><br>
 								<h3>Frameworks</h3>
@@ -307,7 +323,7 @@
 								<!-- Kubernetes -->
 								<h4><span class="label label-default">Kubernetes</span></h4>
 								<div class="progress md-progress">
-									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">75%</div>
 								</div>
 								<br>
 								<!-- Ansible -->
@@ -319,7 +335,7 @@
 								<!-- Terraform -->
 								<h4><span class="label label-default">Terraform</span></h4>
 								<div class="progress md-progress">
-									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
+									<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">20%</div>
 								</div>
 							</article>
 
