--- a/index.html
+++ b/index.html
@@ -85,29 +85,32 @@
 											<tbody>
 											
 											<tr>
-													<td>2023<br>Ventoo AG</td>
+													<td>2023-Aktuell<br>Ventoo AG</td>
 													<td colspan="2"><h4>Azure Cloud Engineer</h4>
 														<ul>
 															<li>Engineering in den Bereichen Microsoft Clientinfrastruktur und Digital Workplace (MWP - Modern Work Place)</li>
-															<li> Packetierung der Standartsoftware für Clients im Endpoint Manager</li>
+															<li>Packetierung der Standartsoftware für Clients im Endpoint Manager</li>
 															<li>Aufbau der Kunden Azure Tenants</li>
 															<li>Azure Administrator</li>
 															<li>Automatisierungen von Prozessen Powershell Basis</li>
+															<li>Unterstützung Support (3rd Level Support) </li>
 														</ul>
 											</tr>
 											<tr>
 													<td>2021-2023<br>Steiner AG</td>
 													<td colspan="2"><h4>System / Cloud Engineer</h4>
 														<ul>
-															<li>Systemintegration, Migration und Upgrade bestehender Serversysteme</li>
-															<li>Integration von Software Applikationen in die Systemlandschaft des Kunden</li>
-															<li>Unterstützung des Supports (Lvl 2-3)</li>
-															<li>Mithilfe beim Applikationssupport</li>
+															<li>2nd/ 3rd Level Support & VIP Support</li>
+															<li>Entwurf, Konfiguration und Optimierung von Cloud-Infrastruktur- und Plattformdiensten auf Azure</li>
+															<li>Design und Implementierung von Sicherheits- und Compliance-Mechanismen in der Azure-Cloud</li>
+															<li>Automatisierung von Abläufen und Prozessen durch Scripting und Konfigurationsmanagement-Tools</li>
 															<li>Evaluation, Test und Implementierung neuer Softwareprodukte und Release Updates</li>
-															<li>Aufbau der Internen Betriebshandbücher,Dokumentation</li>
+															<li>Enge Zusammenarbeit mit anderen Teams, um eine reibungslose Integration von Cloud-Lösungen in vorhandene Systeme zu gewährleisten</li>
 															<li>Aufbau der Kunden Knowledgebase</li>
-															<li>Mithilfe beim aufbau der Firmen internen Azure Tenants</li>
+															<li>Support und Betreuung sämtlicher Filialen und Baustellen der Steiner Gruppe</li>
+															<li>Unterhalt und Kontrolle der Datensicherung</li>
 															<li>Azure Administrator</li>
+															<li>Betreuung Steiner Netzwerk</li>
 														</ul>
 											</tr>
 
